--- a/server/web/index.html
+++ b/server/web/index.html
@@ -6,8 +6,10 @@
     <title>Media Gallery</title>
     <!-- Keep existing CSS styles in a separate file or inline here (truncated for brevity, keep your original CSS) -->
     <style>
-        /* ... INSERT YOUR ORIGINAL CSS HERE ... */
-        /* Ensure basic defaults exist */
+       <link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="modes.css">
+<link rel="stylesheet" href="fullscreen.css">
+<link rel="stylesheet" href="controls.css">
         body { font-family: sans-serif; margin: 0; background: #0a0a0a; color: #e0e0e0; }
         .hidden { display: none !important; }
     </style>
