--- a/server/web/index.html
+++ b/server/web/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Gallery</title>
+    <link rel="stylesheet" href="modes.css">
+<link rel="stylesheet" href="fullscreen.css">
+<link rel="stylesheet" href="controls.css">
     <!-- Keep existing CSS styles in a separate file or inline here (truncated for brevity, keep your original CSS) -->
     <style>
        <link rel="stylesheet" href="main.css">
