--- a/server/web/index.html
+++ b/server/web/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Gallery</title>
-    <link rel="stylesheet" href="modes.css">
-<link rel="stylesheet" href="fullscreen.css">
-<link rel="stylesheet" href="controls.css">
+   
     <!-- Keep existing CSS styles in a separate file or inline here (truncated for brevity, keep your original CSS) -->
     <style>
-       <link rel="stylesheet" href="main.css">
-<link rel="stylesheet" href="modes.css">
-<link rel="stylesheet" href="fullscreen.css">
-<link rel="stylesheet" href="controls.css">
+       <link rel="stylesheet" href="style.css">
+
         body { font-family: sans-serif; margin: 0; background: #0a0a0a; color: #e0e0e0; }
         .hidden { display: none !important; }
     </style>
